Maybe fixed white space problem

--- a/public/views/style.scss
+++ b/public/views/style.scss
@@ -4,6 +4,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	box-sizing: border-box;
+	min-height: 100%;
 }
 
 html, body {
@@ -93,7 +94,7 @@ padding: 10px 0px;
     width: 200px;
     height: 200px;
     float: left;
-    padding: 10px;
+    padding: 20px;
 }
 
 .signup-button {
@@ -109,4 +110,5 @@ padding: 10px 0px;
 	margin: 0 auto;
 	margin-bottom: 10px;
 }
+
 
